# PY-GIT-Quant

./: .env.example  .gitignore  CHECKLIST_PAPER_TRADING.md  CLAUDE_FIX_AUDIT.json  Claude review 3.txt  Claude review 4.txt  Claude review 6.txt  Claude review 7.txt  Fut_config_fix.py  Log extract.txt  Makefile  PATCH_NOTES_ib_client.md  QTRade 14C summary for 14D.txt  QTRade 15B summary for 15C.txt  QtradeV15 Notes.txt  README-ADDENDUM.md  README-IMPLEMENTATION.md  README.md  README_QUICKSTART.md  Run PY in a new PS shell.txt  api_subscriptions_endpoint.py  backtest.py  bootstrap.py  check_api.py  check_positions.py  config.py  contracts.py  dashboard.py  dashboard_server.py  data_guard.py  debug_state.py  debug_tickers.py  deployment_guide.txt  ib_client.py  indicators.py  main.py  market_data.py  options_scanner.py  order_tracker.py  position_monitor.py  (+13 more)
examples/: backtest_example.py  backtest_v2.py  ops_dashboard.py  run_intraday_bot.py  run_realtime_bot.py
samples/: ES_1min_sample.csv
scripts/: smoke_ib.py
src/ib_quant_kit/: cme_map.py  compliance.py  config.py  contract_cache.py  error_handler.py  fusion.py  futures.py  ib_client_1007.py  ib_client_v11.py  lifecycle.py  normalizer.py  ops_alerts.py  options.py  options_chain_ib.py  options_contracts.py  options_factory.py  orders.py  pacing.py  pnl.py  pnl_fees.py  policy.py  positions.py  rtbar.py  selection_engine.py  (+5 more)
src/ib_quant_kit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
strategies/: breakout_scanner.py  ema_crossover.py
tests/: test_limits_positions.py  test_risk_limits.py  test_router.py
(+41 files in other folders)
