[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ib-quant-kit"
version = "0.1.0"
description = "Unified starter bundle for IBKR quant trading"
authors = [{name="You"}]
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
